force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/fields/FieloDRE__APINameObject__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__APINameObject__c</fullName>
    <description>API Name del Objeto a procesar</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>API Name del Objeto a procesar</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>