force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/fields/FieloDRE__FieldMember__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__FieldMember__c</fullName>
    <description>Se debe completar con el Nombre de API del campo lookup a Member en el objeto que va a ser procesado</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Se debe completar con el Nombre de API del campo lookup a Member en el objeto que va a ser procesado</inlineHelpText>
    <label>Field Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>