force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/fields/FieloDRE__FieldToRuleAppliedMasterLookup__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__FieldToRuleAppliedMasterLookup__c</fullName>
    <description>Se debe completar con el Nombre de API del campo lookup del objeto a procesar que se quiere copiar en el Padre del objeto &quot;Fielo Rule Applied&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Se debe completar con el Nombre de API del campo lookup del objeto a procesar que se quiere copiar en el Padre del objeto &quot;Fielo Rule Applied&quot;</inlineHelpText>
    <label>Field To Rule Applied Master Lookup</label>
    <length>80</length>
    <type>Text</type>
</CustomField>