force-app/main/default/objects/FieloDRE__ObjectsToProcess__c/fields/FieloDRE__RuleRecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__RuleRecordTypeDevName__c</fullName>
    <description>Se debe completar con el DeveloperName del objeto Rule que van a aplicar para el objeto a procesar</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Se debe completar con el DeveloperName del objeto Rule que van a aplicar para el objeto a procesar</inlineHelpText>
    <label>Rule Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>